fix-gap-banner

--- a/css/main.css
+++ b/css/main.css
@@ -122,7 +122,7 @@
   .container-img {
     display: flex;
     align-items: flex-end;
-    gap: 20px;
+    gap: 25px;
   }
   .container-minimalist {
     padding-top: 0px;
@@ -155,6 +155,7 @@
   }
   .container-minimalist {
     flex-direction: row;
+    gap: 25px;
   }
   .container-bookshelf {
     gap: 50px;
