--- a/scss/components/_section-modern.scss
+++ b/scss/components/_section-modern.scss
@@ -70,7 +70,7 @@
   .container-img {
     display: flex;
     align-items: flex-end;
-    gap: 20px;
+    gap: 25px;
   }
 
   .container-minimalist {
@@ -110,6 +110,7 @@
 
   .container-minimalist {
     flex-direction: row;
+    gap: 25px;
   }
 
   .container-bookshelf {
